Created controllers, models for user and routes and error handling middle ware

--- a/backendreactchatt/.env
+++ b/backendreactchatt/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 8000
+MONGO_URI = mongodb+srv://admin:admin@reachchatt.pzr8m6x.mongodb.net/?retryWrites=true&w=majority
