finished statte onchange function for login and register route

--- a/backendreactchatt/package.json
+++ b/backendreactchatt/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix ../reactchatt"
   },
   "name": "backendreactchatt",
   "version": "1.0.0",
